temp: added in rate plots to dafd3 stablity

--- a/app/templates/backward_3_de.html
+++ b/app/templates/backward_3_de.html
@@ -110,6 +110,25 @@
             <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[17]) }}" width="100%"></p>
             <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[18]) }}" width="100%"></p>
             <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[19]) }}" width="100%"></p>
+            <!--TODO: REMOVE IF RATE NOT NEEDED -->
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[20]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[21]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[22]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[23]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[24]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[25]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[26]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[27]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[28]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[29]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[30]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[31]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[32]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[33]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[34]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[35]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[36]) }}" width="100%"></p>
+            <p><img class="img", id="stabilityImg", src="{{ url_for('static', filename='img/'+fignames[37]) }}" width="100%"></p>
 {##}
 {#            <br/><br/>#}
 {##}
