--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="col-md-4 col-sm-12 text-center">
                             <b>Polly Fordyce</b>
-                            <br/>Co-PI
+                            <br/>Lead PI
                             <br/>pfordyce@stanford.edu
                         </div>
                         <div class="col-md-4 col-sm-12 text-center">
